--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "url": "git+https://github.com/lotivo/sequelize-acl.git"
   },
   "keywords": [
-    "sequelize-acl", "acl", "sequelize", "acl-sequelize","role","permission" 
+    "sequelize-acl",
+    "acl",
+    "sequelize",
+    "acl-sequelize",
+    "role",
+    "permission"
   ],
   "author": "Pankaj Vaghela <vpankaj1998official@gmail.com>",
   "license": "MIT",
@@ -33,6 +38,9 @@
     "nyc": "^15.0.1"
   },
   "dependencies": {
-    "sequelize": "^5.21.6"
+    "faker": "^4.1.0",
+    "lodash": "^4.17.15",
+    "sequelize": "^5.21.6",
+    "sqlite3": "^4.1.1"
   }
 }
