--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lotivo/sequelize-acl",
-  "version": "0.0.0-dev",
+  "version": "0.0.1",
   "description": "ACL for Sequelize",
   "main": "lib/index.js",
   "scripts": {
@@ -17,6 +17,8 @@
     "sequelize-acl",
     "acl",
     "sequelize",
+    "authorize",
+    "authorization",
     "acl-sequelize",
     "role",
     "permission"
@@ -35,12 +37,12 @@
     "coveralls": "^3.0.11",
     "istanbul": "^0.4.5",
     "mocha": "^7.1.1",
-    "nyc": "^15.0.1"
+    "nyc": "^15.0.1",
+    "sqlite3": "^4.1.1"
   },
   "dependencies": {
     "faker": "^4.1.0",
     "lodash": "^4.17.15",
-    "sequelize": "^5.21.6",
-    "sqlite3": "^4.1.1"
+    "sequelize": "^5.21.6"
   }
 }
