--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@lotivo/sequelize-acl",
-  "version": "0.0.3",
+  "version": "0.0.2",
   "description": "ACL for Sequelize",
   "main": "lib/index.js",
   "scripts": {
@@ -35,14 +35,20 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.11",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "istanbul": "^0.4.5",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
-    "sqlite3": "^4.1.1"
+    "prettier": "^2.0.5",
+    "sqlite3": "^4.2.0"
   },
   "dependencies": {
+    "dataloader": "^2.0.0",
     "faker": "^4.1.0",
     "lodash": "^4.17.15",
+    "node-cache": "^5.1.0",
     "sequelize": "^5.21.6"
   }
 }
