--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,8 @@
 {
-   "semi": true,
-   "singleQuote": true,
-   "tabWidth": 2,
-   "useTabs": false,
-   "implicitArrowLinebreak": false
+  "semi": true,
+  "singleQuote": true,
+  "tabWidth": 2,
+  "useTabs": false,
+  "implicitArrowLinebreak": false,
+  "jsdocVerticalAlignment": true
 }
