--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
     "coveralls": "^3.0.11",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jsdoc": "^24.0.2",
     "eslint-plugin-prettier": "^3.1.3",
     "istanbul": "^0.4.5",
     "mocha": "^7.1.1",
     "nyc": "^15.0.1",
     "prettier": "^2.0.5",
+    "prettier-plugin-jsdoc": "0.0.17",
     "sqlite3": "^4.2.0"
   },
   "dependencies": {
