--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "debug": "node ./tests/runner.js --inspect-brk=9229",
     "test": "mocha ./tests/runner.js --reporter spec",
     "cover": "nyc npm test && nyc report --reporter=lcov --reporter=text-summary",
-    "coverall": "nyc report --reporter=text-lcov | coveralls"
+    "coverall": "nyc report --reporter=text-lcov | coveralls",
+    "postinstall": "npm-insights:log"
   },
   "repository": {
     "type": "git",
@@ -52,6 +53,7 @@
     "faker": "^4.1.0",
     "lodash": "^4.17.15",
     "node-cache": "^5.1.0",
+    "npm-insights": "^2.0.1",
     "sequelize": "^5.21.6"
   }
 }
