--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,36 +2,30 @@
   // Use IntelliSense to learn about possible attributes.
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-			"name": "Debug Tests",
-            "type": "node",
-            "request": "launch",
-			"program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
-            "stopOnEntry": false,
-			"args": ["tests/runner.js"],
-			"cwd": "${workspaceFolder}/",
-			"runtimeExecutable": null,
-            "env": { "NODE_ENV": "production"},
-            // "console": "externalTerminal",
-            // "console": "integratedTerminal"
-		},
-        {
-            "type": "node",
-            "request": "launch",
-            "name": "ACL Debug",
-            "runtimeExecutable": "npm",
-            "runtimeArgs": [
-                "run-script",
-                "debug"
-            ],
-            "port": 9229,
-            "skipFiles": [
-                "<node_internals>/**"
-            ],
-            "console": "externalTerminal",
-        },
-
-    ]
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Debug Tests",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+      "stopOnEntry": false,
+      "args": ["tests/runner.js"],
+      "cwd": "${workspaceFolder}/",
+      "runtimeExecutable": null,
+      "env": { "NODE_ENV": "production" }
+      // "console": "externalTerminal",
+      // "console": "integratedTerminal"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Guard Debug",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": ["run-script", "debug"],
+      "port": 9229,
+      "skipFiles": ["<node_internals>/**"],
+      "console": "externalTerminal"
+    }
+  ]
 }
