--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@lotivo/sequelize-acl",
-  "version": "0.1.2",
-  "description": "ACL for Sequelize",
+  "name": "sequelize-guard",
+  "version": "0.0.1",
+  "description": "An Authorization Library for Sequelize",
   "main": "lib/index.js",
   "scripts": {
     "debug": "node ./tests/runner.js --inspect-brk=9229",
@@ -11,38 +11,40 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lotivo/sequelize-acl.git"
+    "url": "git+https://github.com/lotivo/sequelize-guard.git"
   },
   "keywords": [
-    "sequelize-acl",
-    "acl",
+    "sequelize-guard",
+    "guard",
     "sequelize",
     "authorize",
     "authorization",
-    "acl-sequelize",
+    "guard-sequelize",
     "role",
-    "permission"
+    "permission",
+    "acl",
+    "sequelize-acl"
   ],
   "author": "Pankaj Vaghela <vpankaj1998official@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/lotivo/sequelize-acl/issues"
+    "url": "https://github.com/lotivo/sequelize-guard/issues"
   },
-  "homepage": "https://github.com/lotivo/sequelize-acl#readme",
+  "homepage": "https://github.com/lotivo/sequelize-guard#readme",
   "engines": {
     "node": ">=4.2.4"
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "coveralls": "^3.0.11",
+    "coveralls": "^3.1.0",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jsdoc": "^24.0.2",
+    "eslint-plugin-jsdoc": "^24.0.6",
     "eslint-plugin-prettier": "^3.1.3",
     "istanbul": "^0.4.5",
-    "mocha": "^7.1.1",
+    "mocha": "^7.1.2",
     "nyc": "^15.0.1",
     "prettier": "^2.0.5",
     "prettier-plugin-jsdoc": "0.0.17",
@@ -52,6 +54,6 @@
     "faker": "^4.1.0",
     "lodash": "^4.17.15",
     "node-cache": "^5.1.0",
-    "sequelize": "^5.21.6"
+    "sequelize": "^5.21.7"
   }
 }
