--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node": ">=16.18.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "chai": "^4.3.6",
     "coveralls": "^3.1.1",
     "esdoc": "^1.1.0",
@@ -51,7 +52,6 @@
   },
   "dependencies": {
     "@scarf/scarf": "^1.0.4",
-    "faker": "^6.6.6",
     "lodash": "^4.17.21",
     "node-cache": "^5.1.2",
     "sequelize": "^6.25.3"
