--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sequelize-guard",
+  "name": "@amirrivand/sequelize-guard",
   "version": "0.1.3",
   "description": "An Authorization Library for Sequelize",
   "main": "lib/index.js",
@@ -11,7 +11,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lotivo/sequelize-guard.git"
+    "url": "https://github.com/amirrivand/sequelize-guard.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "keywords": [
     "sequelize-guard",
