--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/amirrivand/sequelize-guard.git"
+    "url": "git+https://github.com/amirrivand/sequelize-guard.git"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com/"
+    "@amirrivand:registry": "https://npm.pkg.github.com/"
   },
   "keywords": [
     "sequelize-guard",
