v6: Improve local dev setup.
- Upgrade eslint, vite version/setup
- Use pre-commit hook using lint-staged.
-

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,17 +4,17 @@ node_js:
   - stable
 
 install:
-  - npm install
+  - yarn install
 
 #script:
-#  - npm run cover
+#  - yarn run cover
 
 # Send coverage data to Coveralls
 #after_script: "coverage"
 
 
 script:
-  - npm run cover
+  - yarn run cover
 
 # Send coverage data to Coveralls
-after_script: "npm run coverall"
+after_script: "yarn run coverall"
