--- a/package.json
+++ b/package.json
@@ -1,14 +1,7 @@
 {
   "name": "sequelize-guard",
-  "version": "0.1.2",
+  "version": "6.0.1",
   "description": "An Authorization Library for Sequelize",
-  "main": "lib/index.js",
-  "scripts": {
-    "debug": "node ./tests/runner.js --inspect-brk=9229",
-    "test": "mocha ./tests/runner.js --reporter spec",
-    "cover": "nyc npm test && nyc report --reporter=lcov --reporter=text-summary",
-    "coverall": "nyc report --reporter=text-lcov | coveralls"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lotivo/sequelize-guard.git"
@@ -25,35 +18,78 @@
     "acl",
     "sequelize-acl"
   ],
-  "author": "Pankaj Vaghela <vpankaj1998official@gmail.com>",
+  "author": {
+    "name": "Pankaj Vaghela",
+    "email": "vpankaj1998official@gmail.com"
+  },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/lotivo/sequelize-guard/issues"
   },
   "homepage": "https://github.com/lotivo/sequelize-guard#readme",
   "engines": {
-    "node": ">=4.2.4"
+    "node": ">=20.19.0"
+  },
+  "main": "dist/index.js",
+  "module": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    "./package.json": "./package.json",
+    ".": {
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "build": "vite build",
+    "dev": "vite build --watch",
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "prepare": "npm run build",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "check:prettier": "prettier -c src/",
+    "format:prettier": "prettier -w src/",
+    "format:staged": "prettier --write",
+    "lint:staged": "eslint --fix --max-warnings 0",
+    "lint:staged:js": "eslint --fix",
+    "pre-commit-backup": "yarn lint-staged && yarn type-check",
+    "pre-commit": "echo a"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "coveralls": "^3.1.0",
+    "@eslint/js": "^9.39.1",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^24.10.1",
+    "@typescript-eslint/parser": "^8.46.4",
+    "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@vitest/ui": "^4.0.9",
+    "coveralls": "^3.1.1",
     "esdoc": "^1.1.0",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jsdoc": "^24.0.6",
-    "eslint-plugin-prettier": "^3.1.3",
-    "istanbul": "^0.4.5",
-    "mocha": "^7.1.2",
-    "nyc": "^15.0.1",
-    "prettier": "^2.0.5",
-    "prettier-plugin-jsdoc": "0.0.17",
-    "sqlite3": "^4.2.0"
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-jsdoc": "^61.2.1",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.6",
+    "prettier": "^3.6.2",
+    "sqlite3": "^5.1.7",
+    "typescript": "^5.9.3",
+    "vite": "^7.2.2",
+    "vite-plugin-dts": "^4.5.4",
+    "vitest": "^4.0.9"
   },
   "dependencies": {
-    "faker": "^4.1.0",
-    "lodash": "^4.17.15",
-    "node-cache": "^5.1.0",
-    "sequelize": "^5.21.7"
+    "lodash": "^4.17.21",
+    "node-cache": "^5.1.2",
+    "sequelize": "^6.37.7"
   }
 }
