Fix eslint import rules plugin

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "prepare": "npm run build",
+    "prepare": "yarn build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "check:prettier": "prettier -c src/",
@@ -66,8 +66,8 @@
     "@eslint/js": "^9.39.1",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.10.1",
-    "@typescript-eslint/parser": "^8.46.4",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "@typescript-eslint/parser": "^8.46.4",
     "@vitest/ui": "^4.0.9",
     "coveralls": "^3.1.1",
     "esdoc": "^1.1.0",
@@ -75,6 +75,7 @@
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsdoc": "^61.2.1",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.5.0",
