--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-  "mocha.files.glob": "tests/runner.js ",
-  "mocha.coverage": null
+  "vitest.enable": true,
+  "vitest.commandLine": "yarn vitest"
 }
