--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,9 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*", "vite.config.mts", ".eslint.config.mjs"]
+  "include": [
+    "src/**/*",
+    "vite.config.mts",
+    ".eslint.config.mjs",
+    "**/*.test.ts"
+  ]
 }
