--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,7 +3,7 @@
   "include": [
     "src/**/*",
     "vite.config.mts",
-    ".eslint.config.mjs",
+    "eslint.config.mjs",
     "**/*.test.ts"
   ]
 }
