v6: test coverage: Add back script for coveralls test coverage

--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
+    "cover": "nyc yarn test:coverage && nyc report --reporter=lcov --reporter=text-summary",
+    "coverall": "nyc report --reporter=text-lcov | coveralls",
     "prepublishOnly": "yarn build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -68,6 +70,7 @@
     "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
     "@typescript-eslint/parser": "^8.46.4",
+    "@vitest/coverage-v8": "4.0.9",
     "@vitest/ui": "^4.0.9",
     "coveralls": "^3.1.1",
     "esdoc": "^1.1.0",
