--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,7 @@ jobs:
   release:
     name: "Release to NPM"
     runs-on: ubuntu-latest
+    environment: npm-publish
     permissions:
       contents: write # Required to create the GitHub Release
       id-token: write # Required for actions/setup-node to authenticate with npm
@@ -56,7 +57,6 @@ jobs:
       - name: Publish to NPM
         env:
           NPM_CONFIG_PROVENANCE: true
-
         run: |
           if [[ "${{ github.ref_name }}" == *"-"* ]]; then
             npm publish --provenance --access public --tag next
