--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,14 +30,18 @@ jobs:
           cache: "yarn" # Automatic caching for Yarn
           registry-url: "https://registry.npmjs.org"
 
-      # Ensure npm 11.5.1 or later is installed
       - name: Update npm
         run: npm install -g npm@latest
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
-      #  Todo: add tests step here
+      - name: Run lint
+        # This runs lint with eslint
+        run: yarn lint
+
+      - name: Run tests with coverage
+        run: yarn test:coverage
 
       - name: Set Version from Tag
         run: |
@@ -55,8 +59,6 @@ jobs:
         run: yarn build
 
       - name: Publish to NPM
-        env:
-          NPM_CONFIG_PROVENANCE: true
         run: |
           if [[ "${{ github.ref_name }}" == *"-"* ]]; then
             npm publish --provenance --access public --tag next
@@ -64,7 +66,7 @@ jobs:
             npm publish --provenance --access public
           fi
 
-      - name: ⬆️ Upload NPM Debug Log on Failure
+      - name: Upload NPM Debug Log on Failure
         if: failure()
         uses: actions/upload-artifact@v4
         with:
