--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,10 @@ dist
 .idea/
 
 .history/
+
+.nx/cache
+.nx/workspace-data
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
+vite.config.*.timestamp*
+vitest.config.*.timestamp*
