--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "engines": {
     "node": ">=22.17.1"
   },
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "build": "nx run sequelize-guard:build",
     "dev": "nx run sequelize-guard:dev",
@@ -63,13 +66,14 @@
     "nx": "22.1.1",
     "nyc": "^17.1.0",
     "prettier": "^3.6.2",
+    "rollup": "^4.53.3",
     "sqlite3": "^5.1.7",
     "tslib": "^2.3.0",
     "typescript": "^5.9.3",
     "vite": "^7.2.2",
     "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-static-copy": "^3.1.4",
     "vitest": "^4.0.9"
   },
-  "nx": {},
-  "dependencies": {}
+  "nx": {}
 }
