--- a/packages/sequelize-guard/project.json
+++ b/packages/sequelize-guard/project.json
@@ -12,11 +12,9 @@
         "{options.outputPath}"
       ],
       "options": {
-        "outputPath": "dist/{projectRoot}",
-        "main": "{projectRoot}/src/index.ts",
-        "tsConfig": "{projectRoot}/tsconfig.lib.json",
-        "viteConfig": "{projectRoot}/vite.config.mts",
-        "buildTargetName": "build"
+        "outputPath": "build/{projectRoot}",
+        "configFile": "{projectRoot}/vite.config.mts",
+        "tsConfig": "{projectRoot}/tsconfig.lib.json"
       }
     }
   }
