--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,9 +10,9 @@
 
     // Module Resolution Settings
     "moduleResolution": "bundler",
-    "target": "ES2020",
-    "module": "ESNext",
-    "lib": ["ES2022"],
+    "target": "es2020",
+    "module": "es2020",
+    "lib": ["ES2024"],
     "types": ["node"],
 
     // Additional Settings
