--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,11 +1,6 @@
 {
   "extends": "./tsconfig.json",
-  "include": [
-    "src/**/*",
-    "vite.config.mts",
-    "eslint.config.mjs",
-    "src/**/*.test.ts"
-  ],
+  "include": ["vite.config.mts", "eslint.config.mjs"],
   "references": [
     {
       "path": "./packages/sequelize-guard/tsconfig.eslint.json"
