--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:watch": "nx run sequelize-guard:test:watch",
     "test:ui": "nx run sequelize-guard:test:ui",
     "test:coverage": "nx run sequelize-guard:test:coverage",
-    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "coveralls": "cat ./coverage/sequelize-guard/lcov.info | coveralls",
     "lint": "nx run sequelize-guard:lint",
     "lint:fix": "nx run sequelize-guard:lint:fix",
     "check:prettier": "nx run sequelize-guard:check:prettier",
