test:coveragea: coveralls: try with base-path

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -68,8 +68,7 @@ jobs:
         uses: coverallsapp/github-action@v2
 
         with:
-          format: lcov
-          file: "coverage/lcov.info"
+          base-path: coverage
 
       # - name: Upload to Coveralls
       #   run: yarn coveralls
