test:coverage: coveralls: try with base-path close to package dir

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -66,9 +66,9 @@ jobs:
 
       - name: Upload coverage to Coveralls
         uses: coverallsapp/github-action@v2
-
         with:
-          base-path: coverage
+          base-path: packages/sequelize-guard/coverage
+          debug: true
 
       # - name: Upload to Coveralls
       #   run: yarn coveralls
