--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,11 +43,10 @@ jobs:
       - name: Run tests with coverage
         run: yarn test:coverage
 
-      - name: Upload to Coveralls
-        run: yarn coveralls
-        env:
-          # REQUIRED: The script needs this to know where to upload
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+      - name: Upload coverage to Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          base-path: packages/sequelize-guard
 
       - name: Build the library
         run: yarn build
