Use NX.dev for monorepo setup (#36)
* Move to NX.dev setup
* Move `sequelize-guard` to `packages/`
* Update CI/CD Github actions
* Update Readme.md

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: "CD: Release version on tag push"
+name: "CD: NPM publish with tag push"
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    name: "Release to NPM"
+    name: "Publish on NPM"
     runs-on: ubuntu-latest
     environment: npm-publish
     permissions:
@@ -43,7 +43,16 @@ jobs:
       - name: Run tests with coverage
         run: yarn test:coverage
 
+      - name: Upload coverage to Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          base-path: packages/sequelize-guard
+
+      - name: Build the library
+        run: yarn build
+
       - name: Set Version from Tag
+        working-directory: ./build/packages/sequelize-guard
         run: |
           # 1. Strip the 'v' prefix from the tag (v1.0.5 -> 1.0.5)
           VERSION=${{ github.ref_name }}
@@ -55,10 +64,8 @@ jobs:
           # Even if you use Yarn, 'npm version' is the safest tool for this specific task
           npm version $VERSION --no-git-tag-version
 
-      - name: Build the library
-        run: yarn build
-
       - name: Publish to NPM
+        working-directory: ./build/packages/sequelize-guard
         run: |
           if [[ "${{ github.ref_name }}" == *"-"* ]]; then
             npm publish --provenance --access public --tag next
