--- a/.gitignore
+++ b/.gitignore
@@ -83,7 +83,9 @@ typings/
 
 # Nuxt.js build / generate output
 .nuxt
-dist
+dist/
+
+build/
 
 # Gatsby files
 .cache/
@@ -110,3 +112,10 @@ dist
 .idea/
 
 .history/
+
+.nx/cache
+.nx/workspace-data
+.cursor/rules/nx-rules.mdc
+.github/instructions/nx.instructions.md
+vite.config.*.timestamp*
+vitest.config.*.timestamp*
