--- a/nx.json
+++ b/nx.json
@@ -4,7 +4,9 @@
   "plugins": [
     {
       "plugin": "@nx/eslint/plugin",
-      "options": { "targetName": "eslint:lint" }
+      "options": {
+        "targetName": "eslint:lint"
+      }
     },
     {
       "plugin": "@nx/vite/plugin",
@@ -21,12 +23,5 @@
       }
     }
   ],
-  "targetDefaults": {
-    "@nx/js:tsc": {
-      "cache": true,
-      "dependsOn": ["^build"],
-      "inputs": ["default", "^default"]
-    }
-  },
   "nxCloudId": "6926732bc3d8b52522afb790"
 }
