v6-docs: initiate docs website with next.js

--- a/nx.json
+++ b/nx.json
@@ -1,6 +1,10 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "defaultBase": "master",
+  "workspaceLayout": {
+    "appsDir": "apps",
+    "libsDir": "libs"
+  },
   "plugins": [
     {
       "plugin": "@nx/eslint/plugin",
@@ -23,5 +27,6 @@
       }
     }
   ],
-  "nxCloudId": "6926732bc3d8b52522afb790"
+  "nxCloudId": "6926732bc3d8b52522afb790",
+  "generators": {}
 }
