--- a/apps/sequelize-guard-docs/package.json
+++ b/apps/sequelize-guard-docs/package.json
@@ -9,18 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "fumadocs-core": "^16.2.0",
+    "fumadocs-mdx": "^14.0.4",
+    "fumadocs-ui": "^16.2.0",
+    "lucide-react": "^0.555.0",
     "next": "16.0.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/mdx": "^2.0.13",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "baseline-browser-mapping": "^2.8.32",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.5",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.16",
     "typescript": "^5.9.3"
   }
