--- a/apps/sequelize-guard-docs/tsconfig.json
+++ b/apps/sequelize-guard-docs/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "ignoreDeprecations": "6.0",
+    "rootDir": ".",
 
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
